<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/device_name"/>
            <Switch
                android:id="@+id/connect_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checked="false"
                android:enabled="true"/>
            <TextView
                android:id="@+id/menu_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/device_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/device_mac"/>
            <TextView
                android:id="@+id/device_mtu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/device_mtu"/>
            <TextView
                android:id="@+id/mtu_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="12sp"
                android:text="N/A"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>